Fri Apr 20 00:57:24 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/Containers_T.cpp (operator=): Added a missing assignment to
	  this->size_ = s.size_.  Thanks to Juan Jose Comellas
 	  <jcomellas@novamens.com> for reporting this.

	* ace/SOCK_Dgram: One of the send() methods was lacking a "const"
	  in front of the ACE_Addr &.  This has been fixed.  Thanks to
 	  Victor Poznyak <VictorP@Webley.COM> for reporting this.

Thu Apr 19 16:18:33 2001  Steve Huston  <shuston@riverace.com>

        * ace/Log_Msg.h: Doxygen-ized some function arguments; other
          minor doc cleanups.

Thu Apr 19 11:08:15 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ACE-INSTALL.html: Point out that ACE supports Solaris 8.
	  Thanks to Logan Modahala <lmodahal@cisco.com> for motivating
 	  this.

Wed Apr 18 13:57:40 2001  Chad Elliott  <elliott_c@ociweb.com>

        * ace/ACE.cpp:

          Modification to check errno for ENOBUFS (in addition to
          EWOULDBLOCK) after writing to a file descriptor.  This will happen
          on VxWorks when a client sends data faster than the server can
          receive it.  This modification causes this to be a retry situation
          instead of an error.   [Bug 866]

Wed Apr 18 11:33:07 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Added the BiDirectional tests to the
	  nightly builds. There is no reason why it did not go in so far. 

Wed Apr 18 10:25:03 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Changed the name of the -config option
	  for SUNCC5.1.  Removed the dot and replaced it with a '_'.

Wed Apr 18 05:23:53 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* tests/Config_Test.cpp: Fixed several warnings related to 
	  not using ACE_TEXT for wide-strings.  Thanks to Bala for
	  reporting this.

Wed Apr 18 02:08:16 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* examples/Synch/proc_sema.dsp:  Fixed release build settings.
