@@ -1,3 +1,9 @@
+Fri Apr 20 19:37:53 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
+
+	* ace/TP_Reactor.cpp: Added a workaround for compiling ACE on 
+	  Linux for the OS/390 OS.  Thanks to James Dorsey
+ 	  <James.Dorsey@acxiom.com> for reporting this.
+
 Fri Apr 20 00:57:24 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>
 
 	* ace/Containers_T.cpp (operator=): Added a missing assignment to
