@@ -1215,6 +1215,7 @@ Logan Modahala <lmodahal@cisco.com>
 Jean Malenfant <jean.malenfant@locusdialog.com>
 Victor Poznyak <VictorP@Webley.COM>
 Juan Jose Comellas <jcomellas@novamens.com>
+James Dorsey <James.Dorsey@acxiom.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
